--- a/styles/global.css
+++ b/styles/global.css
@@ -5,12 +5,12 @@
 @font-face {
     font-family: 'Tratex svart';
     src: local("TRATS"),
-        url("../fonts/TRATS___.TTF") format("truetype");
+        url("../theme/fonts/TRATS___.TTF") format("truetype");
 }
 @font-face {
     font-family: 'Tratex vit';
     src: local("TRATS"),
-        url("../fonts/TRATV___.TTF") format("truetype");
+        url("../theme/fonts/TRATV___.TTF") format("truetype");
 }
 
  * {
@@ -19,7 +19,7 @@
 
 @layer {
 
-    h1, h2, h3, h4, h5, h6, p {
+    .font-tratex {
         font-family: 'Tratex vit', sans-serif;
     }
 
