--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,11 @@
     display: none;
 }
 @layer {
+    .leaflet-div-icon {
+        background: transparent;
+        border: 0px !important;
+        filter: drop-shadow(7px 5px 4px rgba(0, 0, 0, 0.25));
+    }
     .font-tratex {
         font-family: 'Tratex vit', sans-serif;
     }
