--- a/styles/global.css
+++ b/styles/global.css
@@ -23,9 +23,9 @@
 }
 @layer {
     .leaflet-div-icon {
-        background: transparent;
+        background: transparent !important;
         border: 0px !important;
-        filter: drop-shadow(7px 5px 4px rgba(0, 0, 0, 0.25));
+        filter: drop-shadow(5px 4px 4px rgba(0, 0, 0, 0.25));
     }
     .font-tratex {
         font-family: 'Tratex vit', sans-serif;
